# Crypto0aggregator

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/exchanges/: BaseClient.py  BinanceClient.py  BybitClient.py  KrakenClient.py
