[project]
name = "cryptocurrency"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilia gaevskii",email = "i.gaevskii@student.maastrichtuniversity.nl"}
]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
